@@ -23,6 +23,7 @@
 #ifdef ACE_AS_STATIC_LIBS
 #include "dds/DCPS/transport/tcp/Tcp.h"
 #include <dds/DCPS/transport/rtps_udp/RtpsUdp.h>
+#include <dds/DCPS/RTPS/RtpsDiscovery.h>
 #endif
 
 #include "ace/Arg_Shifter.h"
