@@ -20,6 +20,7 @@
 
 #ifdef ACE_AS_STATIC_LIBS
 #include <dds/DCPS/transport/tcp/Tcp.h>
+#include <dds/DCPS/RTPS/RtpsDiscovery.h>
 #endif
 
 #include <ace/streams.h>
